# docs/swagger.json
@@ -333,6 +333,30 @@
                 "responses": {}
             }
         },
+        "/rewards": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rewards"
+                ],
+                "summary": "Get all rewards for a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/users/apply-referral": {
             "post": {
                 "consumes": [
@@ -476,14 +500,19 @@
         "models.Campaign": {
             "type": "object",
             "required": [
+                "AirdropPerUser",
                 "CurrentAirdrop",
                 "Description",
                 "Name",
                 "RequiredFlaq",
+                "TickerImageUrl",
                 "TickerName",
                 "TotalAirdrop"
             ],
             "properties": {
+                "AirdropPerUser": {
+                    "type": "number"
+                },
                 "ArticleUrls": {
                     "type": "array",
                     "items": {
@@ -491,10 +520,13 @@
                     }
                 },
                 "CurrentAirdrop": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "Description": {
                     "type": "string"
+                },
+                "FlaqReward": {
+                    "type": "integer"
                 },
                 "Id": {
                     "type": "string"
@@ -520,11 +552,14 @@
                 "TaskType": {
                     "type": "string"
                 },
+                "TickerImageUrl": {
+                    "type": "string"
+                },
                 "TickerName": {
                     "type": "string"
                 },
                 "TotalAirdrop": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "YTVideoUrl": {
                     "type": "string"
